Fix for homepage in dark mode

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -11,7 +11,10 @@
   transition: color, background-color 0.28s;
 }
 
-html, 
+html {
+  background: $black-dark;
+}
+
 body {
   margin: 0;
   padding: 0;
